// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BootcImageCard should render correctly - no data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="bootmc-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-1"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BOOTC
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="BOOTC title"
            class="pf-v6-c-description-list pf-m-2-col"
            data-ouia-component-id="BOOTC title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Booted Image
                </span>
              </dt>
              <dd
                aria-label="Booted Image value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Booted Image value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Booted Image Digest
                </span>
              </dt>
              <dd
                aria-label="Booted Image Digest value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Booted Image Digest value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Staged Image
                </span>
              </dt>
              <dd
                aria-label="Staged Image value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Staged Image value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Staged Image Digest
                </span>
              </dt>
              <dd
                aria-label="Staged Image Digest value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Staged Image Digest value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Available Image
                </span>
              </dt>
              <dd
                aria-label="Available Image value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Available Image value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Available Image Digest
                </span>
              </dt>
              <dd
                aria-label="Available Image Digest value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Available Image Digest value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Rollback Image
                </span>
              </dt>
              <dd
                aria-label="Rollback Image value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Rollback Image value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Rollback Image Digest
                </span>
              </dt>
              <dd
                aria-label="Rollback Image Digest value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Rollback Image Digest value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BootcImageCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="bootmc-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-3"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BOOTC
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="BOOTC title"
            class="pf-v6-c-description-list pf-m-2-col"
            data-ouia-component-id="BOOTC title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Booted Image
                </span>
              </dt>
              <dd
                aria-label="Booted Image value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Booted Image value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  quay.io:5000/bootc-insights:latest
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Booted Image Digest
                </span>
              </dt>
              <dd
                aria-label="Booted Image Digest value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Booted Image Digest value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  sha256:8fa5b818d1560c7d15d8744069651b671acd13ec5290c2bb55d1fae2492fcb5f
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Staged Image
                </span>
              </dt>
              <dd
                aria-label="Staged Image value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Staged Image value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Not available
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Staged Image Digest
                </span>
              </dt>
              <dd
                aria-label="Staged Image Digest value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Staged Image Digest value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Not available
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Available Image
                </span>
              </dt>
              <dd
                aria-label="Available Image value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Available Image value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Not available
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Available Image Digest
                </span>
              </dt>
              <dd
                aria-label="Available Image Digest value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Available Image Digest value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Not available
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Rollback Image
                </span>
              </dt>
              <dd
                aria-label="Rollback Image value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Rollback Image value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  quay.io:5000/bootc-insights:latest
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  Rollback Image Digest
                </span>
              </dt>
              <dd
                aria-label="Rollback Image Digest value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="Rollback Image Digest value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  sha256:99dec597bd1e95565d9df181cab9bf0278b15e79a613dbd0a357d60f295e9a72
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
